iframe overflow fix for mobile.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -350,7 +350,6 @@ a.lightboxVideo .overlay img {
 }
 
 #livestreamVideoContainer .flex .videoContainer {
-    overflow: hidden;
     flex: 1 1 auto;
     height: calc(100vh - 35px);
 }
